# sploot-media-clustering

./: .env.example  .gitignore  Dockerfile  Dockerfile.storage  QUICK_SECURITY_REFERENCE.md  README.md  SECURITY.md  TOKEN_IMPLEMENTATION.md  docker-compose.local.yml  docker-compose.realimages.yml  docker-compose.realtest.yml  pyproject.toml  requirements.txt
config/: alertmanager.yaml
dashboards/: media-clustering-redis-streams.json
docs/: embedding-mixture-model.md  observability-dashboards.md  postgres-persistence.md  production-rollout.md  redis-streams-ingestion.md  roadmap.md  staging-rollout-plan.md  staging-soak-rehearsal.md  tracing-metrics.md
docs/examples/: staging-jobs.json
docs/tests/: pipeline-health-validation.md
docs/validation-results/: README.md  alert-dry-run-2025-11-01.json  staging-validation-template.md
scripts/: deploy-dashboards.sh  fire-alerts.sh  generate_internal_token.py  mock_storage_service.py  replay_staging_traffic.py  test_e2e_clustering.py  test_real_pet_images.py  test_real_shamu_images.py
src/sploot_media_clustering/: __init__.py  app.py  config.py
src/sploot_media_clustering/infrastructure/: redis.py
src/sploot_media_clustering/routes/: internal.py  public.py
src/sploot_media_clustering/services/: clustering.py  clustering_engine.py  embeddings.py  storage.py
tests/: conftest.py  test_clustering_engine.py  test_stream_pipeline.py
workers/: run_worker.py
